--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "homepage": "https://github.com/mikeygough/make-parties#readme",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "pg": "^8.11.4",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
