--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && npm run build && sequelize db:migrate"
+    "build": "npm install && sequelize db:migrate"
   },
   "repository": {
     "type": "git",
