--- a/db/config/config.json
+++ b/db/config/config.json
@@ -1,4 +1,18 @@
 {
+  "development": {
+    "username": null,
+    "password": null,
+    "database": "make-parties",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
+  "test": {
+    "username": null,
+    "password": null,
+    "database": "make-parties-test",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
